# RiDiCulousFilter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
src/: GPATH  GRTAGS  GTAGS  common.c  common.h  filters.c  filters.h  main.c  main_count.c  main_count.h  main_gc.c  main_gc.h  main_length.c  main_length.h  sampleBases.c
src/misc/: countStrand
